# lab-08-algorithm-old

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
scripts/: checks.sh  tests.sh
tests/: test.cpp
